# Fenix5Sync

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  config.example.yaml  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
cli/: __init__.py  main.py
core/: __init__.py  acquire.py  anonymize.py  archive.py  athlete.py  best_efforts.py  coach_plan.py  coach_state.py  config.py  consolidate.py  dedupe.py  export.py  geo.py  hr_trends.py  ics.py  logging_setup.py  metrics.py  models.py  parse.py  pipeline.py  plan_builder.py  privacy_audit.py  race.py  recap.py  records.py  salvage.py  search.py  segments.py  splits.py  store.py  training_load.py  wellness.py  zones.py
core/importers/: __init__.py  _util.py  gpx.py  tcx.py
docs/: roadmap-brief.html  roadmap-validation.md  support-assistant-prompt.md
docs/coach/: dynamic-coach-research-brief.md  phase0-report.md
docs/form-model-3d/: architecture.md  realism-roadmap.md
docs/history/: decision-brief.md
docs/home/: curation-report.md
docs/incoming/: IMPLEMENTATION_PROMPT.md  README.md  coach_plan_params.json  home_exercises.engine.json  home_exercises.library.json  taichi_library.json  taichi_movements.json
docs/privacy/: decision-brief.md
docs/recap/: decision-brief.md
docs/segments/: decision-brief.md
docs/taichi/: curation-report.md
scripts/: normalize_incoming.py
server/: __init__.py  app.py  progress.py  routes.py  schemas.py
tests/: conftest.py  test_acquire_monitoring.py  test_anonymize.py  test_api.py  test_archive.py  test_athlete.py  test_best_efforts.py  test_coach_content.py  test_coach_evidence.py  test_coach_plan.py  test_coach_state.py  test_consolidate.py  test_export_formats.py  test_fs.py  test_home_content.py  test_hr_trends.py  test_ics.py  test_importers.py  test_insights.py  test_js_units.py  test_metrics.py  test_normalize_incoming.py  test_parse_store_export.py  test_plan_builder.py  test_privacy_audit.py  test_race.py  test_recap.py  test_records.py  test_salvage.py  test_search.py  test_segments.py  test_splits.py  test_taichi_content.py  test_training_load.py  test_wellness.py  test_wellness_store.py  test_zones.py
tests/fixtures/: make_fit.py  make_gpx.py  make_tcx.py  sample.fit
tests/js/: formGeom.test.js  pose3d.test.js  poseValidate.test.js  sessionBuilder.test.js
web/: index.html
web/content/coach/: coach-evidence.pack.json  overview.json
web/content/history/: about.json
web/content/home/: exercises.json  overview.json
web/content/privacy/: about.json
web/content/recap/: about.json
web/content/segments/: about.json
web/content/taichi/: movements.json  overview.json
web/css/: styles.css
web/js/: activity.js  api.js  app.js  charts.js  coach.js  dashboard.js  export.js  formGeom.js  formModel.js  formModel3d.js  home.js  insights.js  logs.js  picker.js  pose3d.js  poseValidate.js  privacy.js  recap.js  segments.js  sessionBuilder.js  sessionPlayer.js  settings.js  sync.js  taichi.js  track.js  util.js
web/prototype/: form-model.html
